# PEA-Project

./: CMakeLists.txt  main.cpp  saOther.txt
header/: BranchAndBound.h  BruteForce.h  CzytnikGrafow.h  Dijkstra.h  GeneticAlgorithm.h  GrafGenerator.h  GrafManager.h  MacierzKosztow.h  Menu.h  Prim.h  SimulatedAnnealing.h
source/: BranchAndBound.cpp  BruteForce.cpp  CzytnikGrafow.cpp  Dijkstra.cpp  GeneratorGrafow.cpp  GeneticAlgorithm.cpp  GrafGenerator.cpp  GrafManager.cpp  ListaSasiedztwa.cpp  MacierzIncydencji.cpp  MacierzKosztow.cpp  Menu.cpp  Prim.cpp  SimulatedAnnealing.cpp
